--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "gatsby": "^2.0.33",
     "gatsby-link": "^2.0.8",
     "gatsby-plugin-catch-links": "^2.0.9",
+    "gatsby-plugin-feed": "^2.0.13",
     "gatsby-plugin-netlify-cms": "^3.0.7",
-    "gatsby-plugin-react-helmet": "^3.0.5",
+    "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-source-filesystem": "^2.0.16",
     "gatsby-transformer-remark": "^2.2.0",
     "netlify-cms": "^2.2.0",
