--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
     "reactstrap": "^8.1.1",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.0",
+    "svgo": "^1.3.2"
   }
 }
